@@ -4,7 +4,7 @@ name = Text::Utils
 
 [ReadmeFromPod]
 enable = true
-filename = docs/readme.pod
+filename = docs/README.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
