@@ -28,6 +28,7 @@ my $s = 'foo';
 The module contains several routines to make text handling
 easier for module and program authors. Following is a short
 synopsis and signature for each of the routines.
+It also exports, by C<DEFAULT>, C<ask> as an alias for routine C<prompt>.
 
 =head3 sub wrap-paragraph
 
